--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,20 @@
 table {
     width: 100%;
   }
+.divResults{
+  margin-top: 30px; 
+}
+h1{
+  font-size: 45px;
+  font-weight: 600;
+  line-height: 81px;
+  color: #333333;
+}
+.example-card {
+  max-width: 400px;
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
